Finish for this project
Maybe late fix someone image

--- a/Css/index.css
+++ b/Css/index.css
@@ -1,448 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Lato|Tangerine');
-a
-{
-	text-decoration: none;
-}
-img
-{
-	max-width: 100%
-	border-radius:10pt;
-}
-header {
-	width:100%; /* Establecemos que el header abarque el 100% del documento */
-	overflow:hidden; /* Eliminamos errores de float */
-	background:rgba(38, 38, 38, 0.8);
-	font-family: Lato;
-	z-index: -1;
-
-}
- 
-.wrapper {
-	width:95%; /* Establecemos que el ancho sera del 90% */
-	max-width:1000px; /* Aqui le decimos que el ancho máximo sera de 1000px */
-	margin:auto; /* Centramos los elementos */
-	overflow:hidden; /* Eliminamos errores de float */
-}
- 
-header .logo {
-	color:#B80733;
-	font-size:45px;
-	line-height:80px;
-	float:left;
-	font-family: Tangerine;
-	text-shadow: 2px 2px 8px #FF0000;
-}
-header .logo:hover
-{
-	text-shadow: 4px 4px 10px #FF0000;
-}
- 
-header nav {
-	float:right;
-	line-height:80px;
-}
- 
-header nav a {
-	display:inline-block;
-	color:#fff;
-	text-decoration:none;
-	padding:10px 20px;
-	line-height:normal;
-	font-size:11px;
-	text-shadow: 2px 2px 8px #000000;
-	font-weight:bold;
-	-webkit-transition:all 500ms ease;
-	-o-transition:all 500ms ease;
-	transition:all 500ms ease;
-}
- 
-header nav a:hover {
-	background:#B80733;
-	border-radius:50px;
-}
-.header2 {
-	position: fixed;
-	height:80px;
-	background:rgba(0, 0, 0, 0.9);
-	z-index: 2;
-	-webkit-box-shadow: 0px 0px 20px #f2f2f2; 
-}
- 
-.header2 .logo {
-	line-height:80px;
-	font-size:45px;
-}
- 
-.header2 nav {
-	line-height:80px;
-}
-@media screen and (max-width: 1025px) {
-	header .logo,
-	header nav {
-		width:100%;
-		text-align:center; /*Centramos el menu y el logotipo*/
-		line-height:30px;
-	}
- 
-	.header2 {
-		height:auto;
-	}
- 
-	.header2 .logo,
-	.header2 nav {
-		line-height:30px;
-	}
-}
-body
-{
-	background-color: #0d0d0d;
-	font-family: Agency FB;
-	margin:0 auto;
-	text-align: center;
-}
-#waheader
-{
-	position: fixed;
-	right:1em;
-	top:2em;
-	z-index: 3;
-	border-radius: 20pt;
-}
-#smheader
-{
-	position: fixed;
-	right:0.1em;
-	top:2em;
-	z-index: 2;
-	border-radius: 20pt;
-}
-#smheader:hover
-{
-	z-index: 3;
-}
-#amoarestudio
-{
-	text-align: left;
-}
-#amoar
-{
-
-	font-family:Lato;
-	font-size: 14em;
-	position:absolute;
-	top: 1.5em;
-	left: 0.3em;
-	color:#FFF;
-	text-shadow: 2px 2px 8px #000000;
-}
-#studio
-{
-	font-family:Lato;
-	font-size: 12.3em;
-	position:absolute;
-	top: 1.3em;
-	left: 0.8em;
-	color:#940529;
-}
-#modelo
-{
-	font-family:Lato;
-	font-size: 4em;
-	position:absolute;
-	top: 1.2em;
-	left: .8em;
-	color:#940529;
-}
-#numero
-{
-	font-family:Lato;
-	font-size: 1em;
-	position:absolute;
-	top: 10em;
-	right:0.2em;
-	color:#FFF;
-	text-shadow: 2px 2px 8px #000000;
-}
-/* Por debajo de 400px */
-@media screen and (max-width: 2000px)
-{
-#numero
-{
-	font-size: 7em;
-	top:1em;
-}
-}
-@media screen and (max-width: 1025px)
-{
-#amoar
-{
-	font-size: 11em;
-	top:0.9em;
-	left:0em;
-}
-#studio
-{
-	font-size: 9em;
-	top: 0.65em;
-	left:0.4em;
-}
-#modelo
-{
-	font-size: 1.8em;
-	top:3.2em;
-}
-#numero
-{
-	font-size: 2em;
-	top: 4em;
-}
-}
-@media screen and (max-width: 538px)
-{
-#amoar
-{
-	font-size: 9em;
-	top: 1.1em;
-}
-#studio
-{
-	font-size: 7em;
-	top: 0.85em;
-}
-#numero
-{
-	font-family:Lato;
-	font-size: 1em;
-	position:absolute;
-	top: 10em;
-	right:0.2em;
-	color:#FFF;
-	text-shadow: 2px 2px 8px #000000;
-}
-}
-@media screen and (max-width: 454px)
-{
-#amoar
-{
-	font-size: 5em;
-	top: 2.29em;
-}
-#studio
-{
-	font-size: 3em;
-	top: 3.49em;
-}
-#modelo
-{
-	font-size: 1.4em;
-	top:6.99em;
-}
-#smheader
-{
-	top:6em;
-}
-#waheader
-{
-	top:6em;
-}
-}
-/*Terminan todos los screens*/
-
-#linea, #linea2
-{
-	margin: 1em;
-}
-#pie
-{	
-	font-family: Agency FB;
-	text-align: left;
-	font-size: 1.5em;
-	width: 100%
-	color:#FFFFFF;
-	margin: 0.5em;
-	
-}
-#div5
-{
-	text-align: left;
-	font-size: 2em;
-	width: 100%;
-	color:#B80733;
-}
-#pie img
-{
-	width: 30px;
-}
-.pie1
-{
-	color: #FFFFFF;
-	text-shadow: 2px 2px 8px #000000;
-	
-}
-.pie1 :hover
-{
-	color:#B80733;
-	-webkit-transition:all 500ms ease;
-}
-.pie2
-{
-	color: #FFFFFF;
-	text-shadow: 2px 2px 8px #000000;
-
-}
-.pie2 :hover
-{
-	color:#B80733;
-	-webkit-transition:all 500ms ease;
-}
-.pie3
-{
-	color: #FFFFFF;
-	text-shadow: 2px 2px 8px #000000;
-	
-}
-.pie3 :hover
-{
-	color:#B80733;
-	-webkit-transition:all 500ms ease;
-}
-.pie4
-{
-	color: #FFFFFF;
-	text-shadow: 2px 2px 8px #000000;
-
-}
-.pie4 :hover
-{
-	color:#B80733;
-	-webkit-transition:all 500ms ease;
-}
-.pie5
-{
-	color: #FFFFFF;
-	text-shadow: 2px 2px 8px #000000;
-	
-}
-.pie5 :hover
-{
-	color:#B80733;
-	-webkit-transition:all 500ms ease;
-}
-#fin1
-{
-	color:#B80733;
-}
-div #primeritem, #segundoitem, #terceritem, #cuartoitem, #quintoitem
-{
-	font-size: 3em;
-	width: 97%;
-	font-family: Lato;
-	color:#FFF;
-	text-align: left;
-	padding-left: 3%;
-}
-div #primeritem b, #segundoitem b, #terceritem b, #cuartoitem b, #quintoitem b
-{
-	font-size: 1.3em;
-	color:#B80733;
-	text-shadow: 1px 1px .1em #000;
-	text-transform: uppercase;
-}
-#trabaja, #quienes, #terminos, #tprivilegios, #faq
-{
-	font-family: Lato;
-	color: #B80733;
-	font-size: 6em;
-}
-
-#nosotros, #somos, #legales
-{
-	font-size: 4em;
-	position:relative;
-	top:-0.85em;
-	font-family: Lato;
-	color: #FFFFFF;
-	text-shadow: 2px 2px 8px #000000;
-}
-#primerfrase, #segundafrase
-{
-	font-family: Tangerine;
-	font-size: 1.8em;
-	position: relative;
-	color:#FFF;
-	text-align: center;
-	bottom: 5em;
-	z-index: 1;
-	text-shadow: 2px 2px 10px #000000;
-}
- #tercerafrase, #cuartafrase, #quintofrase
-{
-	font-family: Tangerine;
-	font-size: 1.4em;
-	position: relative;
-	color:#FFF;
-	text-transform: none;
-	text-align: center;
-	bottom: 5em;
-	z-index: 1;
-	text-shadow: 2px 2px 10px #000000;
-}
-#room img
-{
-	border-radius: 1em ;
-}
-@media screen and (min-width: 1025px)
-{
-	#trabaja, #quienes, #terminos, #tprivilegios, #faq
-{
-	font-size: 10em;
-}
-#pie
-{
-	margin: 2em;
-}
-#nosotros, #somos, #legales
-{
-	font-size: 8em;
-	position:relative;
-	top:-0.7em;
-	font-family: Lato;
-}
-}
-@media screen and (max-width: 767px)
-{
-div #primeritem, #segundoitem, #terceritem, #cuartoitem, #quintoitem
-{
-	font-size: 1.05em;
-	width: 97%;
-	padding-left: 2%;
-}
-div #primeritem b, #segundoitem b, #terceritem b, #cuartoitem b, #quintoitem b
-{
-	color:#B80733;
-	font-size: 1.25em;
-
-	text-shadow: 1px 1px .1em #000;
-}
-#trabaja, #quienes, #terminos, #tprivilegios, #faq
-{
-	
-	font-size: 3.9em;
-	
-}
-#nosotros, #somos, #legales
-{
-	
-	font-size: 2em;
-	
-	
-}
-}
-#compania, #privilegios, #legal, #faqs
-{
-	font-size: 1em;
-	color:white;
-	padding-right: 1%;
-	text-transform: uppercase;
-}
-}
+@import url('https://fonts.googleapis.com/css?family=Lato|Tangerine');a{text-decoration:none}img{max-width:100%border-radius: 10pt}header{width:100%;overflow:hidden;background:rgba(38,38,38,0.8);font-family:Lato;z-index:-1}body{background-color:#0d0d0d;font-family:Agency FB;margin:0 auto;text-align:center}.logo{color:#B80733;font-family:Tangerine;text-shadow:2px 2px 8px #F00}.logo:hover{text-shadow:4px 4px 10px #F00}.carrousel-title{font-size:30px;text-shadow:2px 2px 8px #000}.carrousel-para{font-size:20px;text-shadow:2px 2px 8px #000}#amoar{font-family:Lato;font-size:14em;position:absolute;top:1.5em;left:0.3em;color:#FFF;text-shadow:2px 2px 8px #000}#studio{font-family:Lato;font-size:12.3em;position:absolute;top:1.3em;left:0.8em;color:#940529;text-shadow:2px 2px 8px #000}#modelo{font-family:Lato;font-size:4em;position:absolute;top:1.2em;left: .8em;color:#940529}#numero{font-family:Lato;font-size:1em;position:absolute;top:10em;right:0.2em;color:#FFF;text-shadow:2px 2px 8px #000}@media screen and (max-width: 2000px){#numero{font-size:7em;top:1em}}@media screen and (max-width: 1025px){#amoar{font-size:11em;top:0.9em;left:0em}#studio{font-size:9em;top:0.65em;left:0.4em}#modelo{font-size:1.8em;top:3.2em}#numero{font-size:2em;top:4em}}@media screen and (max-width: 538px){#amoar{font-size:9em;top:1.1em}#studio{font-size:7em;top:0.85em}#numero{font-family:Lato;font-size:1em;position:absolute;top:13.5em;right:1em;color:#FFF;text-shadow:2px 2px 8px #000}}@media screen and (max-width: 454px){#amoar{font-size:5em;top:2.29em}#studio{font-size:3em;top:3.49em}#modelo{font-size:1.4em;top:6.99em}#smheader{top:6em}#waheader{top:6em}}#linea,#linea2{margin:1em}#pie{font-family:Agency FB;text-align:left;font-size:1.5em;color:#FFF;margin:0em}#div5{text-align:left;font-size:2em;padding-left:10px;color:#B80733}#pie img{width:30px}#fin1{color:#B80733}div .primeritem{font-size:3em;font-family:Lato;color:#FFF;text-align:left}div .primeritem b{font-size:1.3em;color:#B80733;text-shadow:1px 1px .1em #000;text-transform:uppercase}div #segundoitem,#terceritem,#cuartoitem,#quintoitem{font-size:3em;width:97%;font-family:Lato;color:#FFF;text-align:left;padding-left:3%}div #segundoitem b, #terceritem b, #cuartoitem b, #quintoitem b{font-size:1.3em;color:#B80733;text-shadow:1px 1px .1em #000;text-transform:uppercase}#trabaja,#quienes,#terminos,#tprivilegios,#faq{font-family:Lato;color:#B80733;font-size:6em;text-shadow:2px 2px 8px #000}#nosotros,#somos,#legales{font-size:4em;position:relative;top:-0.85em;font-family:Lato;color:#FFF;text-shadow:2px 2px 8px #000}#primerfrase,#segundafrase{font-family:Tangerine;font-size:1.8em;position:relative;color:#FFF;text-align:center;bottom:5em;z-index:1;text-shadow:2px 2px 10px #000}#tercerafrase,#cuartafrase,#quintofrase{font-family:Tangerine;font-size:1.4em;position:relative;color:#FFF;text-transform:none;text-align:center;bottom:5em;z-index:1;text-shadow:2px 2px 10px #000}#room img{border-radius:1em}@media screen and (min-width: 1025px){#trabaja,#quienes,#terminos,#tprivilegios,#faq{font-size:10em}#pie{margin:0em}#nosotros,#somos,#legales{font-size:8em;position:relative;top:-0.7em;font-family:Lato}}.column2 #preguntasFrecuentes #cuartoitem #faqs div.question{border:1px solid #333}div .socialnet{text-align:left}.socialnet a{margin:0.5em;color:#fff;text-shadow:2px 2px 8px #000}.socialnet a:hover{color:#f80733;-webkit-transition:all 500ms ease}.socialnet a i{color:#B80733}iframe{width:480px;height:300px;padding-right:0.5em}@media screen and (max-width: 767px){iframe{width:345px;height:400px;padding-right:0.5em}div .primeritem{font-size:1.05em}div #segundoitem,#terceritem,#cuartoitem,#quintoitem{font-size:1.05em;width:97%;padding-left:2%}div .primeritem b{color:#B80733;font-size:1.25em;text-shadow:1px 1px .1em #000}div #segundoitem b, #terceritem b, #cuartoitem b, #quintoitem b{color:#B80733;font-size:1.25em;text-shadow:1px 1px .1em #000}#trabaja,#quienes,#terminos,#tprivilegios,#faq{font-size:3.9em}#nosotros,#somos,#legales{font-size:2em}}#compania,#privilegios,#legal,#faqs{font-size:1em;color:white;padding-right:1%;text-transform:uppercase}}element.style{transition-property:all;transition-duration:0.5s;transition-timing-function:ease;display:block;opacity:1}a{text-decoration:none;color:#2f2f2f}#end{width:100%;float:left;text-align:center}#div5{margin:0.1em}#modelWebCam,#edadTener,#necesitoTrabajar,#fisicoTener,#trabajarEstudio,#comoPagan,#esLegal,#presenciaMasculina,#horarios,#trabajoAtenuante,#ingresos,#experiencia{background-color:#080808;border-radius:0.3em;font-size:0.9em}#modelWebCam p, #edadTener p, #necesitoTrabajar p, #fisicoTener p, #trabajarEstudio p, #comoPagan p, #esLegal p, #presenciaMasculina p, #horarios p, #trabajoAtenuante p, #ingresos p, #experiencia p{background-color:#080808;border-radius:0.3em}#modelWebCam:hover,#edadTener:hover,#necesitoTrabajar:hover,#fisicoTener:hover,#trabajarEstudio:hover,#comoPagan:hover,#esLegal:hover,#presenciaMasculina:hover,#horarios:hover,#trabajoAtenuante:hover,#ingresos:hover,#experiencia:hover{background-color:#282828}#pedadTener,#pmodeloWebCam,#pnecesitoTrabajar,#pfisicoTener,#ptrabajarEstudio,#pcomoPagan,#pesLegal,#ppresenciaMasculina,#phorarios,#ptrabajoAtenuante,#pingresos,#pexperiencia{display:none;font-size:0.8em}#quienesSomos,#pri_vilegios,#preguntasFrecuentes,#ter_minoslegales{background:linear-gradient(#0A0A0A, #0d0d0d)}
